Fixed #28545: not able to see the queue status waiting line when provider is busy Done #31089: Visit Cost update in WaitingRoom

--- a/MyHome/app/src/main/res/layout/adapter_my_care_provider_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_my_care_provider_item.xml
@@ -50,18 +50,22 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/displayName"
             android:layout_below="@+id/displaySpeciality"
-            android:layout_marginTop="12dp"
             android:layout_toRightOf="@+id/providerImage">
 
             <TextView
                 android:id="@+id/waitingCount"
                 style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_marginTop="12dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:text="@string/you_are_next_patient"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/visibility"
+                android:layout_below="@+id/waitingCount"
                 style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_marginTop="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/offline" />
