Fixed #31619: Android v 1.6.3 - MCN error handling message from Medical History overlaps Allergies list Fixed #31628: Android v 1.6.3 - My Care Now- Provider initiated transfer is unsuccessful ON IOT

--- a/MyHome/app/src/main/res/layout/environment_selector.xml
+++ b/MyHome/app/src/main/res/layout/environment_selector.xml
@@ -61,8 +61,7 @@
                     style="@style/tradeGothicLTStd_Dynamic18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/slot1"
-                    android:checked="true" />
+                    android:text="@string/slot1" />
 
                 <RadioButton
                     android:id="@+id/radio_stage"
@@ -108,8 +107,7 @@
                     style="@style/tradeGothicLTStd_Dynamic18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/stage"
-                    android:checked="true" />
+                    android:text="@string/stage" />
 
                 <RadioButton
                     android:id="@+id/radio_amwell_iot"
