--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -163,7 +163,7 @@
 
             <TextView
                 android:id="@+id/email_text"
-                style="@style/tradeGothicLTStdLight_18"
+                style="@style/tradeGothicLTStdLight_22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -183,7 +183,8 @@
                 android:layout_marginLeft="-6dp"
                 android:text="@string/visit_summary_email_agree"
                 android:contentDescription="@string/visit_summary_email_agree"
-                android:textColor="@color/db_charcoal_grey" />
+                android:textColor="@color/db_charcoal_grey"
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/email_list"
