Fixed #28545: Android - user not able to see the queue status waiting line when provider is busy with other customer -on choose doctor screen. Count is shown, however going ahead with busy or unavailable provider should display error message. That is being handled here.

--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -191,12 +192,13 @@
 
         <ProgressBar
             android:id="@+id/cost_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="48dp"
             android:indeterminate="true"
             android:visibility="gone" />
-    </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
