Fixed # 31725: User not able to enter the alphanumeric for First name, Last name, Preferred name, caregiver name, City, Translator in enrollment,  profile and in booking flow

--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -42,7 +42,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/prompt_first_name"
-                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                         android:ellipsize="end"
                         android:hint="@string/prompt_first_name"
                         android:imeOptions="actionNext"
@@ -71,7 +70,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/prompt_last_name"
-                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                         android:ellipsize="end"
                         android:hint="@string/prompt_last_name"
                         android:imeOptions="actionNext"
@@ -123,7 +121,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_toLeftOf="@+id/password_criteria"
-                        app:errorEnabled="true"
+                        app:errorEnablea="true"
                         app:errorTextAppearance="@style/error_appearance"
                         app:hintTextAppearance="@style/hint_appearance" >
 
