Fixed # 31720: Email layout goes out of view on visit summary screen, when add email is tapped

--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroll_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -163,12 +164,12 @@
 
             <TextView
                 android:id="@+id/email_text"
-                style="@style/tradeGothicLTStdLight_22"
+                style="@style/tradeGothicLTStdLight_18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="10dp"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="@string/visit_summary_email"
                 android:contentDescription="@string/visit_summary_email"
                 android:textColor="@color/db_charcoal_grey" />
