--- a/MyHome/app/src/main/res/layout/book_date_header.xml
+++ b/MyHome/app/src/main/res/layout/book_date_header.xml
@@ -22,6 +22,7 @@
         android:layout_alignTop="@id/date"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
+        android:contentDescription="@string/previous_day"
         android:src="@mipmap/arrow_left" />
 
     <ImageView
@@ -33,6 +34,7 @@
         android:layout_alignTop="@id/date"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
+        android:contentDescription="@string/next_day"
         android:src="@mipmap/arrow_right" />
 
 </RelativeLayout>
